Fixed an issue where buttons of #numerical-btns were not highlighting correctly on mobile when tapped

--- a/src/index.scss
+++ b/src/index.scss
@@ -274,9 +274,9 @@ body {
     button:active {
 
       background: linear-gradient(45deg,
-          hsl(20, 30, 40%),
-          hsl(20, 30, 45%),
-          hsl(20, 30, 40%)) !important;
+          hsl(20, 30, 50%),
+          hsl(20, 30, 55%),
+          hsl(20, 30, 50%)) !important;
 
     }
 
